--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Svelte App</title>
+		<title>Tailor App</title>
 	</head>
 	<body>
-		<script type="module" src="/src/main.ts"></script>
+		<script type="module" src="/client/src/main.ts"></script>
 	</body>
 </html>
