--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,8 @@
   <main>
     <div id="editor" contenteditable=""></div>
   </main>
-  
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
