--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/src/client/main.ts"></script>
 </body>
 </html>
